# Message-Embedding

./: .gitignore  LICENSE  README.md  argument_parser.py  compile_to_onnx.py  data.py  generate_embeddings_for_testing.py  loss.py  lr_scheduling.py  main.py  mlflow_logger.py  model.py  pyproject.toml  pyrightconfig.json  test.py  test_model.py  train.py  triplet_dataset.py  uniformity_test.py  vector_database.py
preprocess/: find_queries.py  sql_to_parquet.py
