[project]
name = "memoriesfinetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "fastparquet>=2024.11.0",
    "mlflow>=3.6.0",
    "pandas>=2.3.3",
    "parquet>=1.3.1",
    "sentence-transformers>=5.1.2",
    "spacy>=3.8.7",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
]
