[project]
name = "memoriesfinetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "faiss-cpu>=1.13.2",
    "fastparquet>=2024.11.0",
    "lion-pytorch>=0.2.3",
    "mlflow>=3.6.0",
    "nvidia-ml-py>=13.580.82",
    "pandas>=2.3.3",
    "parquet>=1.3.1",
    "peft>=0.18.0",
    "pyrsmi>=1.1.0",
    "sentence-transformers>=5.1.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
]

[tool.uv.workspace]
members = [
    "preprocessing",
]
